// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/cargo/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "=0.2.43",
    "depName": "libc",
    "depType": "normal",
    "lineNumber": 16,
    "purl": "pkg:cargo/libc",
  },
  Object {
    "currentValue": "1.0.4",
    "depName": "bitflags",
    "depType": "normal",
    "lineNumber": 17,
    "purl": "pkg:cargo/bitflags",
  },
  Object {
    "currentValue": "=0.1",
    "depName": "pcap-sys",
    "depType": "inlineTable",
    "lineNumber": 18,
    "purl": "pkg:cargo/pcap-sys",
  },
  Object {
    "currentValue": "0.21.0",
    "depName": "pnet",
    "depType": "inlineTable",
    "lineNumber": 19,
    "purl": "pkg:cargo/pnet",
  },
  Object {
    "currentValue": "=0.3.6",
    "depName": "winapi",
    "depType": "standardTable",
    "lineNumber": 21,
    "purl": "pkg:cargo/winapi",
    "versionLineNumber": 22,
  },
  Object {
    "currentValue": "0.4.2",
    "depName": "dep1",
    "depType": "standardTable",
    "lineNumber": 25,
    "purl": "pkg:cargo/dep1",
    "versionLineNumber": 26,
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() extracts multiple dependencies 2`] = `
Array [
  Object {
    "currentValue": "0.2.0",
    "depName": "amethyst_animation",
    "depType": "inlineTable",
    "lineNumber": 53,
    "purl": "pkg:cargo/amethyst_animation",
  },
  Object {
    "currentValue": "0.3.0",
    "depName": "amethyst_assets",
    "depType": "inlineTable",
    "lineNumber": 54,
    "purl": "pkg:cargo/amethyst_assets",
  },
  Object {
    "currentValue": "0.2.0",
    "depName": "amethyst_audio",
    "depType": "inlineTable",
    "lineNumber": 55,
    "purl": "pkg:cargo/amethyst_audio",
  },
  Object {
    "currentValue": "0.6.0",
    "depName": "amethyst_config",
    "depType": "inlineTable",
    "lineNumber": 56,
    "purl": "pkg:cargo/amethyst_config",
  },
  Object {
    "currentValue": "0.2.0",
    "depName": "amethyst_core",
    "depType": "inlineTable",
    "lineNumber": 57,
    "purl": "pkg:cargo/amethyst_core",
  },
  Object {
    "currentValue": "0.1.0",
    "depName": "amethyst_controls",
    "depType": "inlineTable",
    "lineNumber": 58,
    "purl": "pkg:cargo/amethyst_controls",
  },
  Object {
    "currentValue": "0.1.0",
    "depName": "amethyst_locale",
    "depType": "inlineTable",
    "lineNumber": 59,
    "purl": "pkg:cargo/amethyst_locale",
  },
  Object {
    "currentValue": "0.7",
    "depName": "amethyst_renderer",
    "depType": "inlineTable",
    "lineNumber": 60,
    "purl": "pkg:cargo/amethyst_renderer",
  },
  Object {
    "currentValue": "0.3",
    "depName": "amethyst_input",
    "depType": "inlineTable",
    "lineNumber": 61,
    "purl": "pkg:cargo/amethyst_input",
  },
  Object {
    "currentValue": "0.2",
    "depName": "amethyst_ui",
    "depType": "inlineTable",
    "lineNumber": 62,
    "purl": "pkg:cargo/amethyst_ui",
  },
  Object {
    "currentValue": "0.2",
    "depName": "amethyst_utils",
    "depType": "inlineTable",
    "lineNumber": 63,
    "purl": "pkg:cargo/amethyst_utils",
  },
  Object {
    "currentValue": "1.0",
    "depName": "derivative",
    "depType": "normal",
    "lineNumber": 64,
    "purl": "pkg:cargo/derivative",
  },
  Object {
    "currentValue": "0.5",
    "depName": "fern",
    "depType": "inlineTable",
    "lineNumber": 65,
    "purl": "pkg:cargo/fern",
  },
  Object {
    "currentValue": "0.4",
    "depName": "log",
    "depType": "normal",
    "lineNumber": 66,
    "purl": "pkg:cargo/log",
  },
  Object {
    "currentValue": "1.0.1",
    "depName": "rayon",
    "depType": "normal",
    "lineNumber": 67,
    "purl": "pkg:cargo/rayon",
  },
  Object {
    "currentValue": "0.1",
    "depName": "rustc_version_runtime",
    "depType": "normal",
    "lineNumber": 68,
    "purl": "pkg:cargo/rustc_version_runtime",
  },
  Object {
    "currentValue": "0.15",
    "depName": "winit",
    "depType": "normal",
    "lineNumber": 69,
    "purl": "pkg:cargo/winit",
  },
  Object {
    "currentValue": "0.1",
    "depName": "thread_profiler",
    "depType": "inlineTable",
    "lineNumber": 71,
    "purl": "pkg:cargo/thread_profiler",
  },
  Object {
    "currentValue": "0.2",
    "depName": "amethyst_gltf",
    "depType": "inlineTable",
    "lineNumber": 74,
    "purl": "pkg:cargo/amethyst_gltf",
  },
  Object {
    "currentValue": "0.5.10",
    "depName": "env_logger",
    "depType": "normal",
    "lineNumber": 75,
    "purl": "pkg:cargo/env_logger",
  },
  Object {
    "currentValue": "0.6",
    "depName": "genmesh",
    "depType": "normal",
    "lineNumber": 76,
    "purl": "pkg:cargo/genmesh",
  },
  Object {
    "currentValue": "0.2",
    "depName": "ron",
    "depType": "normal",
    "lineNumber": 77,
    "purl": "pkg:cargo/ron",
  },
  Object {
    "currentValue": "1.0",
    "depName": "serde",
    "depType": "normal",
    "lineNumber": 78,
    "purl": "pkg:cargo/serde",
  },
  Object {
    "currentValue": "1.0",
    "depName": "serde_derive",
    "depType": "normal",
    "lineNumber": 79,
    "purl": "pkg:cargo/serde_derive",
  },
  Object {
    "currentValue": "0.1",
    "depName": "vergen",
    "depType": "normal",
    "lineNumber": 82,
    "purl": "pkg:cargo/vergen",
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() handles inline tables 1`] = `
Array [
  Object {
    "currentValue": "0.1",
    "depName": "pcap-sys",
    "depType": "inlineTable",
    "lineNumber": 5,
    "purl": "pkg:cargo/pcap-sys",
  },
  Object {
    "currentValue": "0.21.0",
    "depName": "pnet",
    "depType": "inlineTable",
    "lineNumber": 6,
    "purl": "pkg:cargo/pnet",
  },
  Object {
    "currentValue": "1.2",
    "depName": "dep1",
    "depType": "inlineTable",
    "lineNumber": 7,
    "purl": "pkg:cargo/dep1",
  },
  Object {
    "currentValue": "3.4",
    "depName": "dep2",
    "depType": "inlineTable",
    "lineNumber": 8,
    "purl": "pkg:cargo/dep2",
  },
  Object {
    "currentValue": "~12.3.1",
    "depName": "dep3",
    "depType": "inlineTable",
    "lineNumber": 9,
    "purl": "pkg:cargo/dep3",
  },
  Object {
    "currentValue": "INVALID 3.3.1 VERSION",
    "depName": "dep4",
    "depType": "inlineTable",
    "lineNumber": 10,
    "purl": "pkg:cargo/dep4",
    "skipReason": "unknown-version",
  },
  Object {
    "currentValue": "3.2.1",
    "depName": "dep5",
    "depType": "inlineTable",
    "lineNumber": 11,
    "purl": "pkg:cargo/dep5",
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() handles standard tables 1`] = `
Array [
  Object {
    "currentValue": "1.2",
    "depName": "dep1",
    "depType": "standardTable",
    "lineNumber": 4,
    "purl": "pkg:cargo/dep1",
    "versionLineNumber": 8,
  },
  Object {
    "currentValue": "3.4",
    "depName": "dep2",
    "depType": "standardTable",
    "lineNumber": 13,
    "purl": "pkg:cargo/dep2",
    "versionLineNumber": 17,
  },
  Object {
    "currentValue": "~12.3.1",
    "depName": "dep3",
    "depType": "standardTable",
    "lineNumber": 18,
    "purl": "pkg:cargo/dep3",
    "versionLineNumber": 19,
  },
  Object {
    "currentValue": "INVALID 1.3.1 VERSION",
    "depName": "dep4",
    "depType": "standardTable",
    "lineNumber": 23,
    "purl": "pkg:cargo/dep4",
    "skipReason": "unknown-version",
    "versionLineNumber": 24,
  },
]
`;
